fix: force images to be rounded in the parent div with overflow-hidden

--- a/src/components/cards/small/smallcard.css
+++ b/src/components/cards/small/smallcard.css
@@ -5,6 +5,7 @@
 .store .card-wrapper {
   width: 191px;
   height: 68px;
+  @apply rounded overflow-hidden;
 }
 
 @screen sm {
@@ -21,6 +22,7 @@
   width: 94px;
   height: 94px;
   margin: 0 auto;
+  @apply rounded-full overflow-hidden;
 }
 
 .small .med-p,
